# dcis

./: .gitmodules  app.py  manage.py  pyproject.toml
control/: core.py
control/analysis/: analysist.py  geospatial.py
control/communication/: communicator.py  drone_data.py
controllers/: auth_controller.py  dashboard_controller.py  navigation_controller.py  profile_controller.py  settings_controller.py
models/: __init__.py  detection.py  flight.py  flight_snapshot.py  image.py  object.py  point.py  setting.py  task.py  user.py
templates/: auth.html  dashboard.html  navigation.html  profile.html  settings.html
tests/: run_tests.py  test_analysis.py  test_connection.py  test_core.py  test_models.py
utils/: helpers.py  jwt.py
