[tool.poetry]
name = "dcis"
version = "0.1.0"
description = ""
authors = ["qriwty <arthur.social.rech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
numpy = "^1.26.4"
pyzmq = "^26.0.3"
ultralytics = "^8.2.22"
pymavlink = "^2.4.41"
rasterio = "^1.3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
